--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/icon.svg">
+    <link rel="shortcut icon" href="icon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header js-header">
-        <div class="logo"><a href="#"><img src="img/logo.svg" alt="Музыкальный клуб"></a></div>
+        <div class="logo"><a href="#"><img src="logo.svg" alt="Музыкальный клуб"></a></div>
         <nav class="nav">
             <ul class="nav-list">
                 <li><a href="#courses" class="nav-link">Наши курсы</a></li>
@@ -24,7 +24,7 @@
     </header>
 
     <div class="welcome">
-        <img src="img/block1.svg" class="welcome-img" alt="Добро пожаловать">
+        <img src="block1.svg" class="welcome-img" alt="Добро пожаловать">
     </div>
 
     <div class="pluses">
@@ -34,26 +34,26 @@
             
             <div class="pluses-grid">
                 <div class="pluses-left">
-                    <img src="img/Group 6.svg" alt="Музыкальные инструменты">
+                    <img src="Group 6.svg" alt="Музыкальные инструменты">
                 </div>
                 <div class="pluses-right">
                     <h2>каждый день:</h2>
                     <div class="pluses-item">
-                        <img src="img/Sparkling.svg" alt="">
+                        <img src="Sparkling.svg" alt="">
                         <p>Дети развивают свои таланты с удовольствием</p>
                     </div>
                     <div class="pluses-item">
-                        <img src="img/Sparkling.svg" alt="">
+                        <img src="Sparkling.svg" alt="">
                         <p>Подростки участвуют в музыкальных коллективах и реализуют мечты</p>
                     </div>
                     <div class="pluses-item">
-                        <img src="img/Sparkling.svg" alt="">
+                        <img src="Sparkling.svg" alt="">
                         <p>Взрослые увлекательно проводят досуг с единомышленниками</p>
                     </div>
                 </div>
             </div>
             
-            <div class="btn"><a href="#trial-lesson"><img src="img/btn.svg" alt="Записаться"></a></div>
+            <div class="btn"><a href="#trial-lesson"><img src="btn.svg" alt="Записаться"></a></div>
         </div>
     </div>
 
@@ -63,28 +63,28 @@
             <p>занятия в школе и дистанционно</p>
             <div class="assort">
                 <div class="course">
-                    <img src="img/vocal.svg" alt="Вокал">
+                    <img src="vocal.svg" alt="Вокал">
                 </div>
                 <div class="course">
-                    <img src="img/guitar.svg" alt="Гитара">
+                    <img src="guitar.svg" alt="Гитара">
                 </div>
                 <div class="course">
-                    <img src="img/drums.svg" alt="Ударные">
+                    <img src="drums.svg" alt="Ударные">
                 </div>
                 <div class="course">
-                    <img src="img/electro.svg" alt="Электроинструменты">
+                    <img src="electro.svg" alt="Электроинструменты">
                 </div>
                 <div class="course">
-                    <img src="img/keyboard.svg" alt="Клавишные">
+                    <img src="keyboard.svg" alt="Клавишные">
                 </div>
                 <div class="course">
-                    <img src="img/ethnic.svg" alt="Этнические">
+                    <img src="ethnic.svg" alt="Этнические">
                 </div>
                 <div class="course">
-                    <img src="img/wind.svg" alt="Духовые">
+                    <img src="wind.svg" alt="Духовые">
                 </div>
                 <div class="course">
-                    <img src="img/bowed.svg" alt="Смычковые">
+                    <img src="bowed.svg" alt="Смычковые">
                 </div>
             </div>
         </div>
@@ -94,7 +94,7 @@
         <div class="content">
             <h1>подберём преподавателя</h1>
             <p>Для успешных результатов важен комфорт, взаимопонимание и дружелюбная атмосфера</p>
-            <div class="teachers"><img src="img/teachers.svg" alt="Наши преподаватели"></div>
+            <div class="teachers"><img src="/teachers.svg" alt="Наши преподаватели"></div>
         </div>
     </div>
 
@@ -155,17 +155,17 @@
             <div class="footer-grid">
                 <div class="footer-contacts">
                     <div class="footer-logo">
-                        <img src="img/logo2.svg" alt="Музыкальный клуб">
+                        <img src="logo2.svg" alt="Музыкальный клуб">
                     </div>
                     <p>г. Армавир, ул. Колотушкина, д. 25<br>
                     г. Армавир, ул. Пушкина, д. 94</p>
                     <p>Общий номер: +7 (ХХХ) ХХХ-ХХ-ХХ</p>
                     <div class="footer-social">
-                        <a href="#"><img src="img/Telegram.svg" alt="Telegram"></a>
-                        <a href="#"><img src="img/TikTok.svg" alt="TikTok"></a>
-                        <a href="#"><img src="img/WhatsApp.svg" alt="WhatsApp"></a>
-                        <a href="#"><img src="img/Odnoklassniki.svg" alt="Одноклассники"></a>
-                        <a href="#"><img src="img/VK com.svg" alt="ВКонтакте"></a>
+                        <a href="#"><img src="Telegram.svg" alt="Telegram"></a>
+                        <a href="#"><img src="TikTok.svg" alt="TikTok"></a>
+                        <a href="#"><img src="WhatsApp.svg" alt="WhatsApp"></a>
+                        <a href="#"><img src="Odnoklassniki.svg" alt="Одноклассники"></a>
+                        <a href="#"><img src="VK com.svg" alt="ВКонтакте"></a>
                     </div>
                 </div>
                 <div class="footer-links">
