--- a/index1.html
+++ b/index1.html
@@ -94,7 +94,7 @@
         <div class="content">
             <h1>подберём преподавателя</h1>
             <p>Для успешных результатов важен комфорт, взаимопонимание и дружелюбная атмосфера</p>
-            <div class="teachers"><img src="/teachers.svg" alt="Наши преподаватели"></div>
+            <div class="teachers"><img src="teachers.svg" alt="Наши преподаватели"></div>
         </div>
     </div>
 
